Updated by task 'AUTO_TM_MT_1762528239052' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/a9c0ab952fe2fa529d5351e9386727e465376fed

--- a/help/release-notes/maintenance/2024/2024-5-0.md
+++ b/help/release-notes/maintenance/2024/2024-5-0.md
@@ -4,10 +4,10 @@ description: Note sulla versione di manutenzione di  [!DNL Adobe Experience Mana
 exl-id: f917face-97bf-4ee6-844c-097cb3efdec5
 feature: Release Information
 role: Admin
-source-git-commit: ff06dbd86c11ff5ab56b3db85d70016ad6e9b981
+source-git-commit: 2e257634313d3097db770211fe635b348ffb36cf
 workflow-type: tm+mt
-source-wordcount: '2620'
-ht-degree: 87%
+source-wordcount: '2604'
+ht-degree: 80%
 
 ---
 
@@ -93,32 +93,32 @@ Con l’attivazione delle funzioni 2024.5.0 viene fornito il set di funzioni com
 * SITES-20005: la pipeline di authoring deve presentare un ritardo dell’evento configurabile.
 * SITES-20121: Valore predefinito consentito per i campi enumerazione.
 * SITES-20146: abilitazione di Anteprima versione / Confronto per le pagine spostate.
-* SITES-20149: RTC: [cq-wcm-launches-core] - Esportazione della nuova API per Lanci per frammenti di contenuto.
-* SITES-20150: RTC: [cq-command] - Aggiunta di nuovi metodi all’API esistente.
-* SITES-20238: [RTC] - Pfizer MVP - Aggiunta di API per frammenti di contenuto per risolvere i percorsi di frammenti di contenuto in ID e viceversa.
+* SITES-20149: RTC: `[cq-wcm-launches-core]` Esporta nuova API per i lanci per i FC.
+* SITES-20150: RTC: `[cq-command]` Aggiungere nuovi metodi all&#39;API esistente.
+* SITES-20238: `[RTC]` Pfizer MVP - Aggiungi API CF per risolvere i percorsi CF in ID e viceversa.
 * SITES-20333: miglioramento della convalida durante la creazione di frammenti di contenuto.
 * SITES-20334: miglioramento della convalida durante la modifica dei modelli per frammenti di contenuto.
-* SITES-20342: [Back-end] - Pubblicazione a livello di cartella: aggiunta del filtro per pubblicare solo i frammenti di contenuto.
+* SITES-20342: `[Backend]` Pubblicazione a livello di cartella - Aggiungi filtro solo per CF di pubblicazione.
 * SITES-20355: rimozione dei modelli per frammenti di contenuto e servlet API per autorizzazioni.
 * SITES-20387: quando si passa a tagadmin, viene sempre calcolato l’utilizzo dei tag.
 * SITES-20405: supporta mimeType per la compressione del campo.
 * SITES-20451: aggiunta del plug-in sidecar a wcm-commons.
-* SITES-20495: [BE] - Possibilità di ottenere l’autorizzazione per pubblicare a livello di cartella.
-* SITES-20499: [MSM][Async] - Estrazione del codice da AsyncOperationServlet a una classe di utility.
+* SITES-20495: `[BE]` Possibilità di ottenere l&#39;autorizzazione per la pubblicazione a livello di cartella.
+* SITES-20499: `[MSM][Async]` Estrarre il codice da AsyncOperationServlet a una classe di utilità.
 * SITES-20583: aggiunta di etag come proprietà in frammenti `LIST`/search.
 * SITES-20585: miglioramento dell’API di ricerca dei frammenti di contenuto per filtrare in base alla lingua.
 * SITES-20594: viene restituito il nome completo dell’utente che crea, modifica o replica una risorsa.
-* SITES-20601: [OpenAPI] - Aggiornamento dell’API di ricerca per frammenti di contenuto per consentire il recupero dei soli frammenti di contenuto secondari diretti.
+* SITES-20601: `[OpenAPI]` Aggiorna l&#39;API di ricerca CF per consentire il recupero solo dei frammenti di contenuto secondari diretti.
 * SITES-20653: aggiungi experiment-start-date e -end-date.
-* SITES-20656: [BE] - Nuova opzione per corrispondenza di maiuscole/minuscole durante la sostituzione di una stringa.
+* SITES-20656: `[BE]` Specificare l&#39;opzione che consente di usare maiuscole e minuscole in caso di sostituzione di una stringa.
 * SITES-20666: i test devono essere disattivati per impostazione predefinita durante l’authoring.
-* SITES-20752: [cq-wcm-core] - Lanci Apple per frammenti di contenuto.
+* SITES-20752: `[cq-wcm-core]` avvii di Apple per i FC.
 * SITES-20763: aggiornamento degli endpoint API di consegna nell’integrazione di Sites.
 * SITES-20946: aggiunta di etag come proprietà nell’endpoint dei modelli LIST.
-* SITES-20947: [persistenza] - Recupero dell’attività secondaria per id di frammento di contenuto.
+* SITES-20947: `[persistence]` recupera l&#39;attività secondaria per ID frammento di contenuto.
 * SITES-21012: unione dello schema metadati modello al prodotto.
-* SITES-21043: [CF][launches] - Miglioramenti delle prestazioni delle porte laterali in Cloud Service.
-* SITES-21044: [CF][launches] - Implementazione del payload di modifica asincrona porta laterale in Cloud Service.
+* SITES-21043: `[CF][launches]` Miglioramenti delle prestazioni delle porte laterali in Cloud Service.
+* SITES-21044: `[CF][launches]` implementazione asincrona della modifica del payload della porta laterale in Cloud Service.
 * SITES-21550: Metadati personalizzati: campi numero, data, dataora, ora.
 * SITES-21769: utilizzare il prefisso del percorso /jcr:id/ per il recupero risorsa per ID.
 
@@ -142,7 +142,7 @@ Con l’attivazione delle funzioni 2024.5.0 viene fornito il set di funzioni com
 * FORMS-14267: gli utenti riscontrano errori di timeout coerenti durante l’invio di richieste API in ambienti di sviluppo, di staging e di produzione. Queste richieste sono correlate alla generazione di PDF, a volte con dati precompilati utilizzando l’associazione dei dati. Il problema si traduce in un processo di sospensione che poi scade, ma riesce dopo aver riprovato in seguito all’errore.
 * FORMS-14376: si verificano errori nella console se un utente preme il pulsante Ripristina quando il testo statico è contrassegnato come non associato.
 * SCRNS-3945: Skyline: Stringa “Pianificata” non localizzata in Screens.
-* SITES-11727: mancano dati per l’idratazione completa [GQL] dei riferimenti ai frammenti di contenuto.
+* SITES-11727: `[GQL]` Dati mancanti nell&#39;idratazione completa dei riferimenti ai frammenti di contenuto.
 * SITES-16674: la casella di controllo Eredita configurazioni di rollout non funziona sulle proprietà Live Copy.
 * SITES-17772: AEM - Un utente del gruppo di amministratori non può sbloccare una pagina bloccata da un altro utente.
 * SITES-18680: impossibile estrarre le varianti di riferimento nella query graphql (Apple).
@@ -160,14 +160,14 @@ Con l’attivazione delle funzioni 2024.5.0 viene fornito il set di funzioni com
 * SITES-20401: i metadati di sezione non supportano proprietà con più valori.
 * SITES-20496: opzione Nessuna proprietà quando si seleziona un foglio di calcolo in Site Admin (Amministrazione sito).
 * SITES-20522: la presenza di frammenti di contenuto danneggiati interrompono l’endpoint /adobe/sites/cf/fragments.
-* SITES-20559: [MSM][XF][Lufthansa] - Il rollout dei frammenti di esperienza da masters/language a country/language non aggiorna i riferimenti.
+* SITES-20559: `[MSM][XF][Lufthansa]` Il rollout dei frammenti di esperienza da master/lingua a paese/lingua non aggiorna i riferimenti.
 * SITES-20582: la ricerca e l’elenco dei frammenti di contenuto devono consentire la profondità 0.
 * SITES-20586: marca temporale del modello “Pubblicato” non aggiornata.
 * SITES-20608: quando sono inclusi in un modello, i frammenti di esperienza in cui è abilitata la personalizzazione causano un ciclo infinito.
 * SITES-20691: la restrizione del modello di frammento esperienza non rispetta cq:allowedTemplates.
 * SITES-20816: OpenAPI per frammenti di contenuto - Output non coerente se manca il modello del frammento di riferimento.
 * SITES-21122: Difetto di AEM CS Live Copy con frammenti di contenuto.
-* SITES-21233: pannello a soffietto [CoreCmp] non funzionante per GS1 US dopo l’aggiornamento a 15860.
+* SITES-21233: `[CoreCmp]` Pannello a soffietto danneggiato per GS1 US dopo l&#39;aggiornamento a 15860.
 * SITES-21239: rimozione della dipendenza circolare ContentFragmentSearchService.
 * SITES-21316: Anteprima frammento: l’anteprima non riesce a causa di modifiche al codice da SITES-11727.
 * SITES-21391: [evento OpenAPI], nessun evento attivato durante la modifica del titolo o dei tag (proprietà) di un modello per frammenti di contenuto.
