Updated by task 'AUTO_TM_MT_1763040501934' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/aad311002eccdba0575459a21152869aee890e5a

--- a/help/implementing/cloud-manager/release-notes/2025/2025-10-0.md
+++ b/help/implementing/cloud-manager/release-notes/2025/2025-10-0.md
@@ -1,67 +1,88 @@
 ---
-title: Note sulla versione 2025.11.0 di Cloud Manager
-description: Scopri la versione 2025.11.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
+title: Note sulla versione 2025.10.0 di Cloud Manager
+description: Scopri la versione 2025.10.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
 feature: Release Information
 role: Admin
-exl-id: 24d9fc6f-462d-417b-a728-c18157b23bbe
-source-git-commit: baa7364fb421dbaadd1c7abab7a8d27aae601f5a
+source-git-commit: dcadb583bac47a21b0c263cdc8fe26ba2c902de5
 workflow-type: tm+mt
-source-wordcount: '1095'
-ht-degree: 69%
+source-wordcount: '1428'
+ht-degree: 89%
 
 ---
 
-# Note sulla versione 2025.11.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
+# Note sulla versione 2025.10.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
 
 <!-- https://wiki.corp.adobe.com/display/DMSArchitecture/%5BKT%5D+Cloud+Manager+2025.08.0+Release -->
 
-Scopri la versione 2025.11.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
+Scopri la versione 2025.10.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
 
 Consulta anche le [note sulla versione corrente di Adobe Experience Manager as a Cloud Service](/help/release-notes/release-notes-cloud/release-notes-current.md).
 
 ## Date di pubblicazione {#release-date}
 
-La versione 2025.11.0 di Cloud Manager in AEM as a Cloud Service è stata rilasciata venerdì 6 novembre 2025.
+La versione 2025.10.0 di Cloud Manager in AEM as a Cloud Service è stata rilasciata venerdì 2 ottobre 2025.
 
-La prossima versione è pianificata per il venerdì 4 dicembre 2025.
+La prossima versione è pianificata per il 6 novembre 2025.
 
-## Novità - Experience Hub {#experience-hub-whats-new}
+## Novità {#what-is-new}
 
-* **Accesso semplificato ad Experience Hub**
+* **Pipeline di distribuzione dedicate solo per la fase e solo per la produzione**
 
-  La selezione del ruolo utente è stata rimossa e una guida è stata aggiunta per la selezione del **predefinito** (Autore contenuto, Libreria risorse, Amministratore e IT).
+  Cloud Manager offre ora pipeline di distribuzione dedicate solo per lo staging e per la sola produzione, garantendo maggiore flessibilità per la gestione indipendente delle distribuzioni negli ambienti di staging e produzione. Consulta [Pipeline suddivise solo per staging e solo produzione](/help/implementing/cloud-manager/configuring-pipelines/stage-prod-only.md).
 
-* **Annunci** e **Aggiornamenti dei prodotti**
+* **Servizio valutazione dello stato di AEM Cloud**
 
-  Puoi passare dagli annunci disponibili all’altro e iterarli, ma anche ignorarli.
+  Adobe presenta il Servizio di valutazione dello stato di AEM cloud, uno strumento di controllo automatizzato e non invasivo che mantiene l’ambiente AEM as a Cloud Service ottimizzato, sicuro e in linea con le best practice.
 
-* **Recenti**
+  Il servizio offre le seguenti funzionalità:
 
-  È stato aggiunto il supporto per pagine e risorse aggiuntive, tra cui editor pagina, risorse, programmi, dettagli di esecuzione della pipeline e pagine di sicurezza.
+   * Scansione degli ambienti per individuare ostacoli alle prestazioni, inefficienze e rischi potenziali.
+   * Analisi delle strutture dei contenuti (blueprint, live copy) e delle configurazioni personalizzate.
+   * Identificazione delle dipendenze obsolete (AEM SDK, librerie di terze parti).
+   * Segnalazione dei problemi di qualità del codice (annotazioni non corrette, modelli inefficaci).
+   * Indicazioni operative tramite dashboard come **Centro azioni**.
+   * Supporto per l’ottimizzazione proattiva, grazie al rilevamento e alla risoluzione dei problemi in tempo utile.
 
-* **Elenco programmi**
+  I team possono monitorare e migliorare continuamente gli ambienti AEM per garantire prestazioni più fluide, maggiore sicurezza e manutenzione a lungo termine.
 
-  Visualizzazione dei programmi AEM Cloud Manager della tua organizzazione con accesso rapido alla pagina dei dettagli di Cloud Manager.
+  Consulta [Valutazione dello stato per gli ambienti di produzione e staging](/help/implementing/cloud-manager/reports/report-health-assessment.md).
 
-* **Guide AEM**
+* **Supporto pipeline di configurazione**
 
-  Azione rapida e collegamento per gli ambienti di authoring in cui sono abilitati componenti aggiuntivi di AEM Guides.
+  Le pipeline di configurazione sono ora supportate per i siti creati con Edge Delivery Services, espandendo questa funzionalità oltre i singoli ambienti del servizio cloud. Puoi utilizzare le **pipeline di configurazione** per gestire impostazioni quali la configurazione CDN, incluse le regole di filtro del traffico e i selettori di origine. Consulta le [configurazioni supportate](/help/operations/config-pipeline.md#configurations).
 
-## Novità - Cloud Manager {#cloud-manager-whats-new}
+  Le pipeline di configurazione Edge Delivery ora supportano i secret tramite le variabili pipeline di Cloud Manager.
 
-* **Rollback con un solo clic per le distribuzioni della pipeline**
+  Consulta [Aggiungere pipeline Edge Delivery](/help/implementing/cloud-manager/configuring-pipelines/configuring-edge-delivery-pipeline.md).
 
-  Ripristina rapidamente una distribuzione precedente se il codice sorgente del cliente più recente non funziona come previsto. Non è necessario eseguire nuovamente l’intera pipeline o ripristinare manualmente i commit. <!--https://jira.corp.adobe.com/browse/CMGR-69556 -->
+* **Finestra di dialogo di configurazione di Domain Mapping-CDN semplificata**
 
-  Consulta [Ripristinare il codice precedente distribuito in AEM as a Cloud Service](/help/operations/restore-previous-code-deployed.md).
+  Cloud Manager ha semplificato il flusso **Mappa dominio su CDN** per ridurre complessità e velocizzare la configurazione. Nella finestra di dialogo è ora evidenziata l&#39;opzione **CDN gestita da Adobe** (con il badge &quot;Consigliato&quot;).
 
-  Consulta anche [Ripristino dei contenuti in AEM as a Cloud Service](/help/operations/restore.md).
+  ![Finestra di dialogo Mappa dominio su CDN con il pulsante di opzione CDN gestita da Adobe selezionato](/help/implementing/cloud-manager/assets/cdn/map-domain-to-cdn-dialog-box-adobe-managed-cdn.png).
 
-* **Configurazione self-service di WAF per Edge Delivery Services**
+  Consulta [Aggiungere una mappatura di dominio](/help/implementing/cloud-manager/domain-mappings/add-domain-mapping.md).
 
-  Quando si crea un programma Edge Delivery Services in Cloud Manager, è possibile attivare il Firewall applicazione Web (WAF). Questa impostazione protegge il sito da traffico dannoso e attacchi DDoS immediatamente, riducendo il lavoro di configurazione manuale.
+  La finestra di dialogo presenta anche un elenco di controllo singolo e sintetico per la scheda **Altro provider CDN**, incentrato sui contenuti istruttivi seguenti:
 
-  Consulta [Creare il primo sito Edge Delivery con un clic](/help/implementing/cloud-manager/edge-delivery/create-edge-delivery-site.md).
+   * Puntare l’origine della CDN su `publish-p<PROGRAM_ID>-e<ENV_ID>.adobeaemcloud.com`.
+   * Impostare **Host/SNI** per inoltrare l&#39;host originale.
+   * Aggiungere `X-AEM-Edge-Key` (dopo l&#39;implementazione della chiave in Cloud Manager).
+   * Impostare `X-Forwarded-Host` sul proprio dominio rivolto ai clienti.
+   * Cancellare altre intestazioni `X-Forwarded-*` prima di raggiungere AEM.
+
+  ![Finestra di dialogo Mappa dominio su CDN con il pulsante di scelta Altro provider CDN selezionato](/help/implementing/cloud-manager/assets/cdn/map-domain-to-cdn-dialog-box-other-cdn-provider.png)
+
+  <!-- (no redundant `Origin` field or "Learn more" clutter) -->Il piè di pagina allegato fornisce due collegamenti utili: configurazioni di esempio per le CDN principali e un collegamento alla documentazione completa. Il flusso si conclude con l&#39;unico pulsante di conferma &quot;Ho configurato la rete CDN&quot;.
+
+  Consulta [CDN in AEM as a Cloud Service](/help/implementing/dispatcher/cdn.md#point-to-point-CDN).
+
+<!--
+### Staging-Only and Production-Only Pipelines {#staging-production-only-pipelines}
+
+Support for [staging-only and production-only pipelines](/help/implementing/cloud-manager/configuring-pipelines/stage-prod-only.md) has been introduced, enabling you to split full-stack production deployment pipelines into smaller, specialized deployments.
+
+If you are interested in testing this new feature and sharing your feedback, send an email to  `Grp-cloudmanager_splitpipelines@adobe.com` from your email address associated with your Adobe ID. -->
 
 
 ## Programmi Beta {#private-beta-program}
@@ -102,13 +123,35 @@ Ti interessa? Invia un’e-mail a [beta_quickbuild_cmpipelines@adobe.com](mailto
 
 <!-- You can deactivate incremental builds at the pipeline level by setting the property `CM_BUILD_DISABLE_MODULE_CACHING` to `true` (effective during the `BUILD` step). For how to add pipeline variables, see [Pipeline Variables in Cloud Manager](/help/implementing/cloud-manager/configuring-pipelines/pipeline-variables.md).-->
 
+
+
+### Rollback con un solo clic per le implementazioni di pipeline {#one-click-rollback}
+
+Ripristino rapido a un’implementazione precedente se il codice di origine più recente del cliente non funziona come previsto: non è necessario eseguire nuovamente la pipeline completa o ripristinare manualmente i commit.<!--https://jira.corp.adobe.com/browse/CMGR-69556 -->
+
+![Ripristina il codice di origine del cliente dalla scheda Ambienti](/help/implementing/cloud-manager/release-notes/assets/restore-previous-code-deployed.png) *Nella scheda Ambienti precedente è visualizzata l’opzione **Ripristina**>**Codice precedente implementato**per un ambiente selezionato.*
+
+![Finestra di dialogo Ripristina codice precedente implementato](/help/implementing/cloud-manager/release-notes/assets/restore-previous-code-deployed-dialogbox.png)
+*Nella finestra di dialogo **Ripristina codice precedente implementato**, controlla la versione attualmente implementata e quella che desideri ripristinare, quindi fai clic su **Conferma***.
+
+![Ripristino dell’attivazione](/help/implementing/cloud-manager/release-notes/assets/restoring-previous-code-deployed-restoring.png)
+*Cloud Manager ripristina l’ambiente alla versione precedente, mantiene intatti il contenuto e la configurazione e contrassegna l’ambiente **Ripristino**fino al completamento dell’implementazione.*
+
+![Versione del codice di origine in uso](/help/implementing/cloud-manager/release-notes/assets/environments-view-details-sourcecodeversion.png) *La visualizzazione dei dettagli dell’ambiente, come illustrato in precedenza, mostra ora anche la versione del codice di origine attiva in uso.*
+
+Se ti interessa testare questa nuova funzione e condividere il tuo feedback, invia un’e-mail a [restorecode@adobe.com](mailto:restorecode@adobe.com) dall’indirizzo e-mail associato al tuo Adobe ID.
+
+Consulta [Ripristinare il codice precedente distribuito in AEM as a Cloud Service](/help/operations/restore-previous-code-deployed.md).
+
+Consulta anche [Ripristino dei contenuti in AEM as a Cloud Service](/help/operations/restore.md).
+
 ### Ambiente di test specializzato {#specialized-test-environment}
 
 Cloud Manager ora supporta l’aggiunta di un nuovo tipo di ambiente denominato **Ambiente di test specializzato**. L’ambiente è progettato per aiutare i team a convalidare le funzioni in condizioni prossime alla produzione prima della pubblicazione. Questo tipo di ambiente è diverso dagli ambienti *Produzione + Fase*, *Sviluppo* o *Sviluppo rapido* e offre uno spazio mirato per l’esecuzione di scenari di convalida avanzati.
 
 **Miglioramenti recenti**
 
-* Ora puoi configurare un ambiente di test specializzato su una pipeline non di produzione tramite un flusso di lavoro più semplice e intuitivo. La configurazione semplificata accelera il completamento e riduce gli errori di configurazione.
+* Ora puoi configurare ambienti di test specializzati su una pipeline non di produzione tramite un flusso di lavoro più semplice e intuitivo. La configurazione semplificata accelera il completamento e riduce gli errori di configurazione.
 * **Copia contenuto** è ora supportato in ambienti di test specializzati. È ora possibile eseguire **Copia contenuto** in modo sicuro in ambienti di test isolati che rispecchiano la produzione. <!-- (CMGR‑68900) -->
 
 Consulta [Aggiungere un ambiente di test specializzato](/help/implementing/cloud-manager/specialized-test-environment.md).
@@ -161,7 +204,7 @@ Consulta [Gestisci token di accesso](/help/implementing/cloud-manager/managing-c
 
 ## Correzioni di bug {#bug-fixes}
 
-Non vi sono correzioni di bug significativi nella versione di novembre 2025 di Cloud Manager.
+Non sono state apportate correzioni di bug significative nella versione di ottobre di Cloud Manager.
 
 
 <!-- ## Known issues {#known-issues} -->
