Updated by task 'AUTO_TM_MT_1763654292819' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/87d2cc82eb24b1780b9ba0ac3fca8cdb6cce070b

--- a/help/release-notes/universal-editor/2025/2025-11-13.md
+++ b/help/release-notes/universal-editor/2025/2025-11-13.md
@@ -1,20 +1,19 @@
 ---
-title: Note sulla versione 2025.11.20 dell’editor universale
-description: Queste sono le note sulla versione 2025.11.20 dell’editor universale.
+title: Note sulla versione 2025.11.13 dell’editor universale
+description: Queste sono le note sulla versione 2025.11.13 dell’editor universale.
 feature: Release Information
 role: Admin
-exl-id: d16ed78d-d5a3-45bf-a415-5951e60b53f9
 source-git-commit: e36ff1c7c3f03124941c464cc340deef0cdd403b
 workflow-type: tm+mt
-source-wordcount: '176'
-ht-degree: 73%
+source-wordcount: '219'
+ht-degree: 59%
 
 ---
 
 
-# Note sulla versione 2025.11.20 dell’editor universale {#release-notes}
+# Note sulla versione 2025.11.13 dell’editor universale {#release-notes}
 
-Queste sono le note sulla versione del 20 novembre 2025 di Universal Editor.
+Queste sono le note sulla versione del 13 novembre 2025 di Universal Editor.
 
 >[!TIP]
 >
@@ -26,7 +25,11 @@ Queste sono le note sulla versione del 20 novembre 2025 di Universal Editor.
 
 ## Novità {#what-is-new}
 
-* È stata effettuata la migrazione dei token a una nuova interfaccia utente.
+* Le azioni contestuali sono state spostate in un menu a discesa.
+* gli schemi json ora vengono consegnati per la convalida.
+* [L&#39;account di accesso per sviluppatori locali](/help/sites-cloud/authoring/universal-editor/navigation.md#local-developer-login) è ora una parte principale di Universal Editor e l&#39;estensione non è più necessaria.
+* La barra corretta è stata migrata a una nuova interfaccia utente.
+* Gli elementi nella struttura del contenuto ora si espandono automaticamente.
 
 ## Funzioni per adozione anticipata {#early-adopter}
 
@@ -38,7 +41,5 @@ Il nuovo editor Rich Text ProseMirror, con un selettore di pagina nella finestra
 
 ## Altri miglioramenti {#other-improvements}
 
-* La gestione dei valori dell’editor Rich Text è stata semplificata.
-* È stata risolta una rara condizione di corsa della barra degli strumenti.
-* Sono state rimosse le funzioni inutilizzate.
-* Le dipendenze sono state aggiornate.
+* È stata aggiunta una larghezza specifica per il menu contestuale.
+* Errori del servizio Editor universale a causa di alcuni valori `null` sono stati risolti.
