Updated by task 'AUTO_TM_MT_1765575043941' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/54762ad4c147468900eb6e26722b981c80f9d757

--- a/help/implementing/cloud-manager/release-notes/2025/2025-11-0.md
+++ b/help/implementing/cloud-manager/release-notes/2025/2025-11-0.md
@@ -1,29 +1,28 @@
 ---
-title: Note sulla versione 2025.12.0 di Cloud Manager
-description: Scopri la versione 2025.12.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
+title: Note sulla versione 2025.11.0 di Cloud Manager
+description: Scopri la versione 2025.11.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
 feature: Release Information
 role: Admin
-exl-id: 24d9fc6f-462d-417b-a728-c18157b23bbe
 source-git-commit: 431c3060b59dca852bdce14b6793dcb5c352139b
 workflow-type: tm+mt
-source-wordcount: '1055'
-ht-degree: 66%
+source-wordcount: '1095'
+ht-degree: 69%
 
 ---
 
-# Note sulla versione 2025.12.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
+# Note sulla versione 2025.11.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
 
 <!-- https://wiki.corp.adobe.com/display/DMSArchitecture/%5BKT%5D+Cloud+Manager+2025.08.0+Release -->
 
-Scopri la versione 2025.12.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
+Scopri la versione 2025.11.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
 
 Consulta anche le [note sulla versione corrente di Adobe Experience Manager as a Cloud Service](/help/release-notes/release-notes-cloud/release-notes-current.md).
 
 ## Date di pubblicazione {#release-date}
 
-La data di pubblicazione della versione 2025.12.0 di Cloud Manager in AEM as a Cloud Service è il venerdì 4 dicembre 2025.
+La versione 2025.11.0 di Cloud Manager in AEM as a Cloud Service è stata rilasciata venerdì 6 novembre 2025.
 
-La prossima versione è pianificata per il venerdì 22 gennaio 2026.
+La prossima versione è pianificata per il venerdì 4 dicembre 2025.
 
 ## Novità - Experience Hub {#experience-hub-whats-new}
 
@@ -49,30 +48,6 @@ La prossima versione è pianificata per il venerdì 22 gennaio 2026.
 
 ## Novità - Cloud Manager {#cloud-manager-whats-new}
 
-* **Stabilità, prestazioni e affidabilità migliorate**
-
-  Questa versione include aggiornamenti di ottimizzazione e manutenzione che migliorano la stabilità, le prestazioni e l’affidabilità di Cloud Manager.
-
-* **Ambiente di testing specializzato**
-
-  >[!NOTE]
-  >
-  >Sono ora disponibili per l’acquisto ambienti di test specializzati. Contatta il tuo rappresentante Adobe per effettuare un ordine.
-
-  Cloud Manager ora supporta l’aggiunta di un nuovo tipo di ambiente denominato **Ambiente di test specializzato**. L’ambiente è progettato per aiutare i team a convalidare le funzioni in condizioni prossime alla produzione prima della pubblicazione. Questo tipo di ambiente è diverso dagli ambienti *Produzione + Fase*, *Sviluppo* o *Sviluppo rapido* e offre uno spazio mirato per l’esecuzione di scenari di convalida avanzati.
-
-  Consulta [Aggiungere un ambiente di test specializzato](/help/implementing/cloud-manager/specialized-test-environment.md).
-
-  ![Finestra di dialogo Aggiungi ambiente con il pulsante di scelta Ambiente di test specializzato selezionato](/help/implementing/cloud-manager/release-notes/assets/specialized-test-environment.png)
-
-<!--
->[!NOTE]
->
->Adobe has closed beta access requests for Specialized Testing Environments, having reached a sufficient number of participants. The feature is now in preparation for general availability.
-
-If you are interested in testing this new feature and sharing your feedback, send an email to [grp-earlyadopter_cs_advtestenvironment@adobe.com](mailto:grp-earlyadopter_cs_advtestenvironment@adobe.com) from your email address associated with your Adobe ID. -->
-
-
 * **Rollback con un solo clic per le distribuzioni della pipeline**
 
   Ripristina rapidamente una distribuzione precedente se il codice sorgente del cliente più recente non funziona come previsto. Non è necessario eseguire nuovamente l’intera pipeline o ripristinare manualmente i commit. <!--https://jira.corp.adobe.com/browse/CMGR-69556 -->
@@ -86,8 +61,6 @@ If you are interested in testing this new feature and sharing your feedback, sen
   Quando si crea un programma Edge Delivery Services in Cloud Manager, è possibile attivare il Firewall applicazione Web (WAF). Questa impostazione protegge il sito da traffico dannoso e attacchi DDoS immediatamente, riducendo il lavoro di configurazione manuale.
 
   Consulta [Creare il primo sito Edge Delivery con un clic](/help/implementing/cloud-manager/edge-delivery/create-edge-delivery-site.md).
-
-
 
 
 ## Programmi Beta {#private-beta-program}
@@ -128,6 +101,27 @@ Ti interessa? Invia un’e-mail a [beta_quickbuild_cmpipelines@adobe.com](mailto
 
 <!-- You can deactivate incremental builds at the pipeline level by setting the property `CM_BUILD_DISABLE_MODULE_CACHING` to `true` (effective during the `BUILD` step). For how to add pipeline variables, see [Pipeline Variables in Cloud Manager](/help/implementing/cloud-manager/configuring-pipelines/pipeline-variables.md).-->
 
+### Ambiente di test specializzato {#specialized-test-environment}
+
+Cloud Manager ora supporta l’aggiunta di un nuovo tipo di ambiente denominato **Ambiente di test specializzato**. L’ambiente è progettato per aiutare i team a convalidare le funzioni in condizioni prossime alla produzione prima della pubblicazione. Questo tipo di ambiente è diverso dagli ambienti *Produzione + Fase*, *Sviluppo* o *Sviluppo rapido* e offre uno spazio mirato per l’esecuzione di scenari di convalida avanzati.
+
+**Miglioramenti recenti**
+
+* Ora puoi configurare un ambiente di test specializzato su una pipeline non di produzione tramite un flusso di lavoro più semplice e intuitivo. La configurazione semplificata accelera il completamento e riduce gli errori di configurazione.
+* **Copia contenuto** è ora supportato in ambienti di test specializzati. È ora possibile eseguire **Copia contenuto** in modo sicuro in ambienti di test isolati che rispecchiano la produzione. <!-- (CMGR‑68900) -->
+
+Consulta [Aggiungere un ambiente di test specializzato](/help/implementing/cloud-manager/specialized-test-environment.md).
+
+![Finestra di dialogo Aggiungi ambiente con il pulsante di scelta Ambiente di test specializzato selezionato](/help/implementing/cloud-manager/release-notes/assets/specialized-test-environment.png)
+
+>[!NOTE]
+>
+>Adobe ha chiuso le richieste di accesso in versione beta per gli ambienti di test specializzati, avendo raggiunto un numero sufficiente di partecipanti. La funzione è ora in preparazione per la disponibilità generale.
+
+<!--
+If you are interested in testing this new feature and sharing your feedback, send an email to [grp-earlyadopter_cs_advtestenvironment@adobe.com](mailto:grp-earlyadopter_cs_advtestenvironment@adobe.com) from your email address associated with your Adobe ID. -->
+
+
 ### Integra il tuo Git personale (BYOG) {#gitlab-bitbucket-azure-vsts}
 
 <!-- BOTH CS & AMS -->
@@ -166,7 +160,7 @@ Consulta [Gestisci token di accesso](/help/implementing/cloud-manager/managing-c
 
 ## Correzioni di bug {#bug-fixes}
 
-Non vi sono correzioni di bug significativi nella versione di dicembre 2025 di Cloud Manager.
+Non vi sono correzioni di bug significativi nella versione di novembre 2025 di Cloud Manager.
 
 
 <!-- ## Known issues {#known-issues} -->
