--- a/help/release-notes/universal-editor/2025/2025-12-04.md
+++ b/help/release-notes/universal-editor/2025/2025-12-04.md
@@ -3,10 +3,10 @@ title: Note sulla versione 2025.12.04 dell’editor universale
 description: Queste sono le note sulla versione 2025.12.04 dell’editor universale.
 feature: Release Information
 role: Admin
-source-git-commit: 817853d15550d3cb377684c5c983781942c953ff
+source-git-commit: 80918852022fbdff030163cb006d7e583d75dc6c
 workflow-type: tm+mt
-source-wordcount: '166'
-ht-degree: 57%
+source-wordcount: '257'
+ht-degree: 36%
 
 ---
 
@@ -28,6 +28,10 @@ Queste sono le note sulla versione del 4 dicembre 2025 di Universal Editor.
 * Le intestazioni di autorizzazione sono state disabilitate a favore dell&#39;[accesso sviluppatore locale.](/help/sites-cloud/authoring/universal-editor/navigation.md#local-developer-login)
 * È ora disponibile un menu contestuale nella struttura [strutturata facendo clic con il pulsante destro del mouse.](/help/sites-cloud/authoring/universal-editor/navigation.md#content-tree-mode)
 * Tasto di scelta rapida aggiunto a [componenti duplicati.](/help/sites-cloud/authoring/universal-editor/navigation.md#duplicate)
+* Universal Editor ora utilizza un nuovo endpoint di configurazione per abilitare automaticamente solo le funzioni dell’editor, che possono essere utilizzate con la combinazione di modello di authoring e persistenza dei contenuti.
+   * I filtri non sono più necessari per nascondere le opzioni non utilizzabili nel tuo caso d’uso.
+   * I filtri possono ancora essere utilizzati per limitare le opzioni disponibili nel caso di utilizzo, ma che non desideri esporre ai tuoi utenti.
+   * I filtri possono essere utilizzati solo per disabilitare le funzioni disponibili, non per mostrare quelle non disponibili.
 
 ### Nuovo editor Rich Text {#new-rte}
 
